<resources>
    <string name="app_name">ApPoc</string>
    <string name="title_activity_acitivity_splash_screen">acitivity_splash_screen</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_menu">menu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="open_drawer">Abrir</string>
    <string name="close_drawer">Fechar</string>
    <string name="adiconealimentosalmoco">Adicione os alimentos que você cosumiu no almoço</string>
    <string name="adiconealimentoscafe">Adicione os alimentos que você cosumiu no café da manhã</string>
    <string name="adiconealimentosjanta">Adicione os alimentos que você cosumiu na janta</string>
    <string name="pedometro_preferences">Referências do Medidor</string>
    <string name="pedometro_preferences_starttracking">pedometro_preferences_starttracking</string>
    <string name="activityhome_latitudelongitude">latitude: %1$f longitude: %2$f</string>
    <string name="activityhome_warntracking">Iniciando percurso…</string>
    <string name="activityhome_warntrackingpaused">Você pausou o percurso! Clique no botão da barra superior para ver os seus resultados</string>
    <string name="measurementactivity_title">Resultados</string>
    <string name="measurementactivity_today">Hoje</string>
    <string name="measurementactivity_week">Esta Semana</string>
    <string name="measurementdetailfragment_measuredistance">Distância: %1$.2f Km</string>
    <string name="measurementdetailfragment_measuretime">Tempo: %1$.2f Horas</string>
    <string name="measurementdetailfragment_measureaveragespeed">Velocidade: %1$.2f km/h</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_config">Configurações</string>
    <string name="Proxima">Próxima</string>
    <string name="pref_header_general">Geral</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutos</item>
        <item>30 minutos</item>
        <item>1 hora</item>
        <item>3 horas</item>
        <item>6 horas</item>
        <item>Nunca</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string-array name="list_preference_entries">
        <item>Entrada 1</item>
        <item>Entrada 2</item>
        <item>Entrada 3</item>
    </string-array>
    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="multi_select_list_preference_default_value" />
    <string name="pref_title_system_sync_settings">Configurações da Sincronização do Sistema</string>
    <string name="pref_header_notifications">Notificações</string>
    <string name="pref_title_new_message_notifications">Habilitar </string>
    <string name="pref_title_ringtone">Toques</string>
    <string name="pref_ringtone_silent">Silencioso</string>
    <string name="pref_title_vibrate">Vibrar</string>
    <string name="title_activity_configuracoes">Configurações</string>
    <string name="gramatica">Gramática</string>
    <string name="literatura">Literatura</string>
    <string name="ingles">Inglês</string>
    <string name="espanhol">Espanhol</string>
    <string name="matematica">Matemática</string>
    <string name="quimica">Química</string>
    <string name="biologia">Biologia</string>
    <string name="fisica">Física</string>
    <string name="historia">História</string>
    <string name="geografia">Geografia</string>
    <string name="atualidades">Atualidades</string>
    <string name="popup">Pop-Ups</string>
    <string name="segunda">Segunda</string>
    <string name="terca">Terça</string>
    <string name="quarta">Quarta</string>
    <string name="quinta">Quinta</string>
    <string name="sexta">Sexta</string>
    <string name="sabado">Sábado</string>
    <string name="coesao">
        <![CDATA[
            COESÃO\n

            \t\tA coesão textual condiz com a correta construção de um texto no quesito gramatical, em que foca-se na utilização de termos corretos que tragam uma devida ligação entre frases, períodos e parágrafos; por isso, essa matéria tem como objetivo melhorar,por intermédio de regras, a escrita gramaticalmente.\n\n

            Mecanismos de Coesão\n
            \t\tAnáfora: retoma um termo utilizado anterior, através de sinônimos ou de pronomes.\n

            \t\tCatáfora: antecipa uma expressão que será utilizada logo após no texto.\n\n

            Regras:\n

            \t\tReferência\n
            \t\t\t\tPessoal: utilização de pronomes pessoais\n
            \t\t\t\tDemonstrativa: utilização de pronomes demonstrativos e advérbios\n
            \t\t\t\tComparativa: utilização de semelhanças para retomar.\n\n

            \t\tSubstituição: a reposição de um termo por um semelhante para evitar repetições

            \t\tElipse: dentro de um contexto, um termo a ser retomado, pode ser omitido sem a perda do sentido

            \t\tConjunção: é um termo que estabelece ligação entre duas orações (frases com verbo)\n\n\n

            COERÊNCIA\n\n
            \t\tA Coerência é a relação lógica das ideias de um texto que decorre da sua argumentação - resultado especialmente dos conhecimentos do transmissor da mensagem.\n

            \t\tUm texto contraditório e redundante ou cujas ideias iniciadas não são concluídas, é um texto incoerente. A incoerência compromete a clareza do discurso, a sua fluência e a eficácia da leitura.\n

            \t\tAssim a incoerência não é só uma questão de conhecimento, decorre também do uso de tempos verbais e da emissão de ideias contrárias.\n
        ]]>
    </string>
    <string name="grmatica_normativa">
        <![CDATA[
            \t\tA gramática normativa é aquela que prescreve as regras, normas gramaticais de uma língua. Ela admite apenas uma forma correta para a realização da língua, tratando as variações como erros gramaticais. Atualmente é muito criticada pelos gramáticos, pois já se admitem outras gramáticas como a descritiva, a gerativa, etc.\n
            \t\tA Gramática Normativa toma como base as regras gramaticais tradicionais e o  uso da língua por dialetos de prestígio como por exemplo obras literárias consagradas, textos científicos, discursos formais, etc. As variedades linguísticas faladas são tratadas como desvio da norma até que sejam dicionarizadas e oficialmente acrescentadas às regras gramaticais daquela língua.\n
            \t\tEstuda a Fonologia através da ortoépia (estudo da pronúncia correta dos vocábulos), da prosódia (determinação da sílaba tônica) e da ortografia (representação correta da língua escrita)\n
            \t\tNa Morfologia estuda a forma dos vocábulos, as classes de palavras e as classes gramaticais.Por fim, na Sintaxe estuda a relação entre as palavras de uma oração ou relação entre as orações de um período a partir de regras pré-determinadas com relação à concordância, à regência e à colocação pronominal.
        ]]>
    </string>
    <string name="ortografia">
        <![CDATA[
            \t\tA ortografia se caracteriza por estabelecer padrões para a forma escrita das palavras. Essa escrita está relacionada tanto a critérios etimológicos (ligados à origem das palavras) quanto fonológicos (ligados aos fonemas representados). É importante compreender que a ortografia é fruto de uma convenção. A forma de grafar as palavras é produto de acordos ortográficos que envolvem os diversos países em que a língua portuguesa é oficial. A melhor maneira de treinar a ortografia é ler, escrever e consultar o dicionário sempre que houver dúvida.\n\n\n

           EMPREGO DAS LETRAS K,W E Y\n\n
            Utilizam-se nos seguintes casos:\n
            \t\ta) Em antropônimos originários de outras línguas e seus derivados.\n

            \t\t\t\tExemplos: Kant, kantismo; Darwin, darwinismo; Taylor, taylorista.\n\n

            \t\tb) Em topônimos originários de outras línguas e seus derivados.\n

            \t\t\t\tExemplos: Kuwait, kuwaitiano.\n\n

            \t\tc) Em siglas, símbolos, e mesmo em palavras adotadas como unidades de medida de curso internacional.\n

            \t\t\t\tExemplos: K (Potássio), W (West), kg (quilograma), km (quilômetro), Watt.
        ]]>
    </string>
</resources>