<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/shapebotao"
    android:orientation="vertical"
    tools:context=".notify.EstudoAlarme"
    tools:ignore="ExtraText">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/md_blue_50"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:background="@color/md_blue_50"
                android:orientation="vertical">

                <include
                    android:id="@+id/include"
                    layout="@layout/toolbar_perfil"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="Suspicious0dp" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="@color/white"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="sans-serif-condensed-light"
                        android:text="Configure os seus horários de Insulina"
                        android:textColor="@color/md_black_1000"
                        android:textSize="22sp">

                    </TextView>


                </LinearLayout>

                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/rbNotification"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pref_header_notifications" />

                    <RadioButton
                        android:id="@+id/rbPopUp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/popup" />

                </RadioGroup>

                <TimePicker
                    android:id="@+id/timePicker"
                    android:layout_width="match_parent"
                    android:layout_height="350dp"
                    android:layout_gravity="center"
                    android:numbersBackgroundColor="@color/white"
                    android:numbersInnerTextColor="@color/azulbebe" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/cBSegunda"
                        android:layout_width="90dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="28dp"
                        android:layout_marginLeft="28dp"
                        android:text="@string/segunda"
                        app:layout_constraintStart_toStartOf="parent"
                        tools:ignore="MissingConstraints"
                        tools:layout_editor_absoluteY="0dp" />

                    <CheckBox
                        android:id="@+id/cBTerca"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="52dp"
                        android:layout_marginLeft="52dp"
                        android:text="@string/terca"
                        app:layout_constraintStart_toEndOf="@+id/cBSegunda"
                        tools:ignore="MissingConstraints"
                        tools:layout_editor_absoluteY="0dp" />

                    <CheckBox
                        android:id="@+id/cBQuarta"
                        android:layout_width="112dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginRight="8dp"
                        android:text="@string/quarta"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.822"
                        app:layout_constraintStart_toEndOf="@+id/cBTerca"
                        tools:ignore="MissingConstraints"
                        tools:layout_editor_absoluteY="0dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/cBQuinta"
                        android:layout_width="90dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="32dp"
                        android:layout_marginBottom="8dp"
                        android:text="@string/quinta"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent" />

                    <CheckBox
                        android:id="@+id/cBSexta"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="52dp"
                        android:layout_marginBottom="8dp"
                        android:text="@string/sexta"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/cBQuinta" />

                    <CheckBox
                        android:id="@+id/cBSabado"
                        android:layout_width="97dp"
                        android:layout_height="30dp"
                        android:layout_marginStart="48dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginBottom="8dp"
                        android:text="@string/sabado"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toEndOf="@+id/cBSexta" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/cBDomingo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginEnd="30dp"
                        android:layout_marginRight="30dp"
                        android:text="Domingo"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toEndOf="@+id/cBSexta"
                        app:layout_constraintTop_toBottomOf="@+id/cBQuarta"
                        app:layout_constraintVertical_bias="0.0" />
                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="@color/md_blue_50"
                android:gravity="center"
                android:orientation="vertical">

                <Button
                    android:id="@+id/setAlarm"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/shapebotao"
                    android:gravity="center"
                    android:text="Configurar Notificação"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>


</LinearLayout>